# metall-ffi

./: .gitignore  CMakeLists.txt  conanfile.py
.github/workflows/: publish-conan-branch-package.yml  publish-release.yml
cmake/: install_library.cmake
src/dice/ffi/: metall.cpp  metall.h  metall_internal.hpp
test_package/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  tests_Sanity.cpp
